Bugs fixing: Card on Mobile, Footer center alignment

--- a/css/index.css
+++ b/css/index.css
@@ -84,30 +84,6 @@
     footer {
         padding: 0 1rem;
     }
-    
-    .card {
-        width: 100vw;
-    }
-
-    .card > div {
-        opacity: 0;
-        padding: 0 1rem;
-    }
-
-    .card > div > button{
-        visibility: hidden;
-    }
-
-    .card > div:hover {
-        opacity: 1;
-        background-color: var(--nav-bg-color);
-        backdrop-filter: blur(30px) saturate(125%);
-        -webkit-backdrop-filter: blur(30px) saturate(125%);
-    }
-
-    .card > div:hover > button {
-        visibility: visible;
-    }
 
     #top {
         padding: 1rem;
