--- a/css/post.css
+++ b/css/post.css
@@ -107,12 +107,6 @@ nav > div > span:nth-child(n + 2) {
 	-o-transition: 0.2s all ease-in-out;
 }
 
-#cassiopeia {
-	background: var(--cassiopeia);
-	background-size: cover;
-	background-position: top center;
-}
-
 .flex {
 	display: flex;
 }
@@ -243,14 +237,6 @@ nav > div > span:nth-child(n + 2) {
 		padding: 9px 0;
 	}
 
-	.card {
-		width: 100vw;
-	}
-
-	.card > div {
-		display: none;
-	}
-
 	.img-halfwidth {
 		max-width: 100vw;
 	}
@@ -273,22 +259,11 @@ nav > div > span:nth-child(n + 2) {
 		margin-right: auto;
 	}
 
-	[class*="icon-"] {
-		font-size: 27px;
-		color: var(--font-color);
-		display: inline-block;
-		transition: 0.2s all ease-in-out;
-		-webkit-transition: 0.2s all ease-in-out;
-		-moz-transition: 0.2s all ease-in-out;
-		-o-transition: 0.2s all ease-in-out;
-		margin-left: 18px;
-	}
-
 	.prev-next-posts {
 		text-align: center;
 		display: block;
-		margin-left: auto;
-		margin-right: auto;
+		width: 100vw;
+		margin: 0;
 	}
 
 	.prev-next-posts > a:nth-child(1) {
